added some header functions

--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
 </head>
 <body>
     <header>
+<section class="banner">
+    <div class="banner-first">
+        <h6>Happy New Year</h6>
+        <h3>New Year Party Celebration</h3>
+    </div>
+    <div class="banner-second">
 
+    </div>
+    <div class="banner-third">
+
+    </div>
+</section>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
     
 </body>
