added some html text with css

--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
     <header>
 <section class="banner">
     <div class="banner-first">
+        <div>
         <h4>Happy New Year</h4>
-        <h2>New Year Party Celebration</h2>
+        <h2 class="banner-title">New Year Party Celebration</h2>
+    </div>
+
     </div>
     <div class="banner-second">
-
+<div>
+    <h2 class="discount">65% OFF</h2>
+    <h5 class="discount-dills">Our holiday deals are better.</h5>
+    <h3 class="discount-cata">ALL CATEGORIES</h3>
+</div>
     </div>
     <div class="banner-third">
 
