add image with css

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <h5 class="discount-dills">Our holiday deals are better.</h5>
     <h3 class="discount-cata">ALL CATEGORIES</h3>
 </div>
+<img src="images/New Year Photo.png"/>
     </div>
     <div class="banner-third">
 
