--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="banner-first">
         <div>
         <h4>Happy New Year</h4>
-        <h2 class="banner-title">New Year Party Celebration</h2>
+        <h2 class="banner-title">New Year Party <br/>Celebration</h2>
     </div>
 
     </div>
@@ -25,7 +25,7 @@
 <img src="images/New Year Photo.png"/>
     </div>
     <div class="banner-third">
-
+<h3 class="banner-third-title">Welcome to<br/> midnight party</h3>
     </div>
 </section>
     </header>
