added image with inline css and other css

--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
 </div>
 <img src="images/New Year Photo.png"/>
     </div>
-    <div class="banner-third">
+    <div class="banner-third">  
+       
 <h3 class="banner-third-title">Welcome to<br/> midnight party</h3>
+<h6 class="banner-third-description">   
+    This is very welcome midnight for all. We are really delighted .<br/>
+    This is very welcome midnight for all. We are really delighted .  
+</h6>
+<img style="height: 300px; width: 300px; " src="images/Group 70.png"/>
     </div>
 </section>
     </header>
