--- a/index.html
+++ b/index.html
@@ -29,14 +29,21 @@
 <h3 class="banner-third-title">Welcome to<br/> midnight party</h3>
 <h6 class="banner-third-description">   
     This is very welcome midnight for all. We are really delighted .<br/>
-    This is very welcome midnight for all. We are really delighted .  
+    This is very welcome midnight for all. We are really delighted . 
 </h6>
-<img style="height: 300px; width: 300px; " src="images/Group 70.png"/>
+<h4 class="banner-just">Join now</h4>
+<img style="height: 200px; width: 300px; " src="images/Group 70.png"/>
     </div>
 </section>
     </header>
     <main>
-
+<section>
+        <div class="main-div">
+<h3> <span style="color: red;"> Place:</span>New Park Hotel</h3>
+<h3>  <span style="color: red;">Date:</span> 31 December Night 2023</h3>
+<h3> <span style="color: red;">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+</div>
+</section>
     </main>
     <footer>
 
