--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 </section>
     </header>
     <main>
-<section>
+<section class="main-container">
         <div class="main-div">
 <h3> <span style="color: red;"> Place:</span>New Park Hotel</h3>
 <h3>  <span style="color: red;">Date:</span> 31 December Night 2023</h3>
 <h3> <span style="color: red;">Time:</span> Evening 7.30 pm to 12.30 am</h3>
+<button style="background-color: red; color: aliceblue;" type="button">Join now</button>
 </div>
 </section>
     </main>
