added offer section div with css

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
 <button style="background-color: red; color: aliceblue;" type="button">Join now</button>
 </div>
 </section>
+<section class="offer-section">
+<div>
+<h4 class="offer-section-title">NEW BEST OFFER</h4>
+<h2 class="offer-section-top-title">Coming Soon</h2>
+<h6>There are many beautiful products in our shop.<br/> A large amount of discount is running now.<br/>
+so let's buy all of new products.It's perfect time.</h6>
+</div>
+<div>
+
+</div>
+</section>
     </main>
     <footer>
 
