added div title description with css

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <div class="banner-third">  
        
 <h3 class="banner-third-title">Welcome to<br/> midnight party</h3>
-<h6 class="banner-third-description">   
+<p class="banner-third-description">   
     This is very welcome midnight for all. We are really delighted .<br/>
     This is very welcome midnight for all. We are really delighted . 
-</h6>
+</p>
 <h4 class="banner-just">Join now</h4>
 <img style="height: 200px; width: 300px; " src="images/Group 70.png"/>
     </div>
@@ -46,15 +46,26 @@
 </div>
 </section>
 <section class="offer-section">
-<div>
+    <table>
+  <tr>
+<div class="div-seperate">
+    <div>
 <h4 class="offer-section-title">NEW BEST OFFER</h4>
 <h2 class="offer-section-top-title">Coming Soon</h2>
-<h6>There are many beautiful products in our shop.<br/> A large amount of discount is running now.<br/>
-so let's buy all of new products.It's perfect time.</h6>
+<p>There are many beautiful products in our shop.<br/> A large amount of discount is running now.<br/>
+so let's buy all of new products.It's perfect time.</p>
 </div>
+</tr>
+<tr>
 <div>
-
+<h2 class="year-title">2024</h2>
+<p>There are many beautiful products in our shop.<br/> A large amount of discount is running now.<br/>
+    so let's buy all of new products.It's perfect time.</p>
+    <img src="images/Group 96.png">
 </div>
+</div>
+</tr>
+</table>
 </section>
     </main>
     <footer>
