added some images and holiday css style etc

--- a/index.html
+++ b/index.html
@@ -46,17 +46,13 @@
 </div>
 </section>
 <section class="offer-section">
-    <table>
-  <tr>
 <div class="div-seperate">
-    <div>
+<div>
 <h4 class="offer-section-title">NEW BEST OFFER</h4>
 <h2 class="offer-section-top-title">Coming Soon</h2>
 <p>There are many beautiful products in our shop.<br/> A large amount of discount is running now.<br/>
 so let's buy all of new products.It's perfect time.</p>
 </div>
-</tr>
-<tr>
 <div>
 <h2 class="year-title">2024</h2>
 <p>There are many beautiful products in our shop.<br/> A large amount of discount is running now.<br/>
@@ -64,8 +60,20 @@ so let's buy all of new products.It's perfect time.</p>
     <img src="images/Group 96.png">
 </div>
 </div>
-</tr>
-</table>
+</section>
+
+<section class="holiday-section">
+<div>
+<h6>WHAT IS FUNCTIONAL</h6>
+<h2 style="color: red;">Holidays Sale 50%</h2>
+<p>There are many beautiful products in our shop.<br/> A large amount of discount is running now.<br/>
+    so let's buy all of new products.It's perfect time. </p>
+<img style="width: 430px; height: 420px; float: right;" src="images/Rectangle 1.png"/>
+<img style="float: right;" src="images/Group 44.png">
+</div>
+</section>
+<section>
+
 </section>
     </main>
     <footer>
