added images paragraphs with css style

--- a/index.html
+++ b/index.html
@@ -61,19 +61,25 @@ so let's buy all of new products.It's perfect time.</p>
 </div>
 </div>
 </section>
-
 <section class="holiday-section">
 <div>
 <h6>WHAT IS FUNCTIONAL</h6>
 <h2 style="color: red;">Holidays Sale 50%</h2>
 <p>There are many beautiful products in our shop.<br/> A large amount of discount is running now.<br/>
     so let's buy all of new products.It's perfect time. </p>
-<img style="width: 430px; height: 420px; float: right;" src="images/Rectangle 1.png"/>
+<img style="width: 430px; height: 480px; float: right;" src="images/Rectangle 1.png"/>
+<img style="float:left;width: 500px; height: 600px;" src="images/Group 75.png">
 <img style="float: right;" src="images/Group 44.png">
+<img style="width: 1300px; height: 250px;" src="images/Rectangle 2.png">
 </div>
 </section>
-<section>
-
+<section class="portfolio">
+<div>
+<h4>THE BEST GIFTS</h4>
+<h2>Our Awesome Portfolio</h2>
+<p>There are many beautiful products in our shop.<br/> A large amount of discount is running now.<br/>
+    so let's buy all of new products.It's perfect time. </p>
+</div>
 </section>
     </main>
     <footer>
