added images with css

--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@ so let's buy all of new products.It's perfect time.</p>
 <p>There are many beautiful products in our shop.<br/> A large amount of discount is running now.<br/>
     so let's buy all of new products.It's perfect time. </p>
 </div>
+<div class="product-container">
+    <img src="images/Rectangle 3.png"/><br/>
+   <img src="images/Rectangle 4.png"/><br/>
+   <img src="images/Rectangle 5.png"/> 
+</div>
+<div class="product-second-container">
+<img src="images/Rectangle 6.png"/><br/>
+<img src="images/Rectangle 7.png"/><br/>
+<img src="images/Rectangle 8.png"/>
+</div>
 </section>
     </main>
     <footer>
