added subscribe section with css

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@ so let's buy all of new products.It's perfect time.</p>
 <img src="images/Rectangle 8.png"/>
 </div>
 </section>
+<section class="subscribe-section">
+    <div class="subscribe-div">
+        <img src="images/Group 61.png"/>
+<h3>Subscribe Newsletter</h3>
+<p>Please, subscribe our Newsletter to get more good information.<br/>
+    Please, subscribe our Newsletter to get more good information.</p>
+    </div>
+</section>
     </main>
     <footer>
 
