added input form

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@ so let's buy all of new products.It's perfect time.</p>
 <h3>Subscribe Newsletter</h3>
 <p>Please, subscribe our Newsletter to get more good information.<br/>
     Please, subscribe our Newsletter to get more good information.</p>
+    <form action="sample-page-handler">
+        <input type="email" placeholder="enter your email" name="">
+        <button style="background-color: red;" >submit</button>
+    </form>
     </div>
 </section>
     </main>
