--- a/index.html
+++ b/index.html
@@ -99,13 +99,26 @@ so let's buy all of new products.It's perfect time.</p>
     Please, subscribe our Newsletter to get more good information.</p>
     <form action="sample-page-handler">
         <input type="email" placeholder="enter your email" name="">
-        <button style="background-color: red;" >submit</button>
+        <button style="background-color: red; border-radius: 5px;" >submit</button>
     </form>
     </div>
 </section>
     </main>
-    <footer>
-
+    <footer class="footer-div" >
+  <div>
+    <p style="justify-content: space-between; padding-top: 150px; padding-left: 40px;">44, Big Building Roosevelt Street<br/>
+        Beach Gardens Florida 33410</p>
+        <p style="text-align: justify; margin-top:10px; margin-left: 20px;">2017, All Rights Reserved.</p>
+    </div>
+    <div class="footer-div-last">
+     <img src="images/Call.png"/> +00 123 584 124 <br/>
+    <img src="images/Website.png"/> www.website.com <br/>
+    </div>
+   <div class="social-link">
+    <img src="images/Facebook.png"/>
+    <img src="images/Instagram.png"/>
+    <img src="images/Linkedin.png"/>
+   </div>
     </footer>
     
 </body>
